tests/reference/asr-substring_endidx-0f7e2c9.stderr
semantic error: Substring end index must be of type integer
 --> tests/errors/substring_endidx.f90:4:17
  |
4 |     print*, s(1:5.2)
  |                 ^^^ 
